test/fixtures/output/002_security_group.json
{
    "Outputs": {
        "SecurityGroupGroupId": {
            "Value": {
                "Fn::GetAtt": [
                    "SecurityGroup",
                    "GroupId"
                ]
            }
        },
        "SecurityGroupRef": {
            "Value": {
                "Ref": "SecurityGroup"
            }
        }
    },
    "Parameters": {
        "SecurityGroupVpcId": {
            "Type": "String"
        }
    },
    "Resources": {
        "SecurityGroup": {
            "Properties": {
                "GroupDescription": "my security group",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "10.0.0.0/24",
                        "FromPort": "80",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp": "169.125.0.0/24",
                        "FromPort": "80",
                        "ToPort": "80"
                    }
                ],
                "VpcId": {
                    "Ref": "SecurityGroupVpcId"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        }
    }
}
